# webgpu-gemma4-tax

./: .gitignore  Readme.md  fork.md  onnx_gemma4.sln
app/: .gcloudignore  Dockerfile  basic.html  data.md  deploy.bash  index.html  nginx.conf  notworking.html  simple.html
app/css/: poc.css
app/js/: ai.js  data.js  nav.js  renderer.js
data/: sample_200.jsonl
data-pipeline/QA-generation/: failed_pdfs_claude.json  generate_qa.py  generate_qa_claude.py  generate_qa_top100.py  pyproject.toml
data-pipeline/QA-generation/poc_FORMS/: bootstrap_cache.py  data.json  data.jsonl  data_old.json  form_mapping.json  generate_data.py  make_json.py  pass_cache.json  pass_cache_seed.json  setup_forms.py
data-pipeline/pdf-link-extractor/: download_pdfs.js  filter_log.jsonl  filter_with_claude.js  irs_all_forms_raw.json  irs_pdf_links.json  irs_pdf_links_final.json  irs_pdf_urls_final.txt  irs_pdf_urls_only.txt  package-lock.json  package.json  scrape_irs_pdfs.js  test_qa.js
finetune/: gemma4-regfinetune-failed.ipynb  install-compat.py
finetune/finetuned/: config.json  main.py  pyproject.toml
measure/: evaluate_qa.mjs  evaluate_qa.py  package-lock.json  package.json  pyproject.toml  results.json  results_js.json
webview2-host/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WebGPUHost.csproj
